[metadata]
name = pyethnicity
version = attr: pyethnicity.__version__
author = Cangyuan Li
author_email = everest229@gmail.com
description = Predict race from name and location
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CangyuanLi/pyethnicity
project_urls =
    Bug Tracker = https://github.com/CangyuanLi/pyethnicity/issues
    Documentation = https://pyethnicity.readthedocs.io/en/latest/
    Paper = https://arxiv.org/pdf/2307.08496.pdf
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    onnxruntime;platform_system=='Darwin'
    onnxruntime-gpu;platform_system=='Windows' or platform_system=='Linux'
    pandas
    polars
    pyarrow
    pycutils
    requests
    tqdm

[options.packages.find]
where = src

[options.package_data]
pyethnicity = 
    data/distributions/*.parquet